test/e2e/features/agentgateway/basicauth/testdata/insecure-route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-example-insecure
spec:
  parentRefs:
    - name: super-gateway-too
  hostnames:
    - "insecureroute.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
